# readcast

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pixi.toml  playwright.config.ts  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-conda.yml
docs/: spec-history.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
recipe/: recipe.yaml
scripts/: build-frontend.mjs  ensure-kokoro-edge.sh  test-server.py  verify_distribution.py
src/readcast/: __init__.py  services.py
src/readcast/api/: app.py
src/readcast/cli/: __init__.py  main.py  migrate.py
src/readcast/core/: __init__.py  chunker.py  config.py  embedder.py  extractor.py  llm.py  models.py  store.py  synthesizer.py  tagger.py
src/readcast/extractors/: __init__.py  youtube.py
src/readcast/web/extension/: content.js  manifest.json  popup.html  popup.js
src/readcast/web/extension/plugins/: gmail.js  reddit.js  youtube.js
src/readcast/web/frontend/: app.jsx
src/readcast/web/static/: app.js  bundle.js  index.html
tests/: conftest.py  test_api.py  test_chunker.py  test_cli.py  test_config.py  test_extractor.py  test_llm.py  test_models.py  test_services.py  test_store.py  test_synthesizer.py
tests/e2e/: article-detail.spec.ts  article-list.spec.ts  drag-drop.spec.ts  drawer.spec.ts  keyboard.spec.ts  layout.spec.ts  navigation.spec.ts  player.spec.ts  playlist.spec.ts  search.spec.ts  seed.py
tests/fixtures/: brave_reader_article.html
